--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:weightSum="1">
 
     <!-- Невидимый вычислитель цены поездки. Он ДОЛЖЕН быть невидимым-->
     <WebView
@@ -10,97 +13,29 @@
         android:layout_height="0dp"
         android:visibility="invisible"/>
 
+    <!-- Баннер устанавливает размеры програмно! см OrderFragment -->
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:scaleType="centerCrop"
+        android:layout_height="0dp"
+        android:scaleType="fitCenter"
         app:srcCompat="@drawable/banner_prilozhenia"/>
-
-    <Button
-        android:id="@+id/next_button"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:backgroundTint="@color/colorPrimary"
-        android:text="@string/order_ready"
-        android:textSize="@dimen/text_view_text_size"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/adresRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView2">
+        android:layout_height="0dp"
+        android:layout_weight="0.8">
 
     </android.support.v7.widget.RecyclerView>
 
-    <android.support.v7.widget.GridLayout
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/next_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/next_button"
-        android:layout_below="@+id/adresRecyclerView"
-        app:columnCount="2"
-        app:rowCount="1">
+        android:layout_height="0dp"
+        android:layout_weight="0.2"
+        android:text="@string/order_ready"
+        android:textSize="@dimen/text_view_text_size"
+        app:backgroundTint="@color/colorPrimary"/>
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:layout_columnWeight="1">
-
-            <ImageButton
-                android:id="@+id/addAdresImageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:background="@null"
-                app:srcCompat="@drawable/ic_plus_100dp"/>
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/addAdresImageButton"
-                android:layout_centerHorizontal="true"
-                android:text="@string/add_adres"
-                android:textSize="@dimen/text_view_text_size"/>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:layout_columnWeight="1">
-
-            <TextView
-                android:id="@+id/timeTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/timeSetImageButton"
-                android:layout_centerHorizontal="true"
-                android:text="@string/add_time"
-                android:textSize="@dimen/text_view_text_size"/>
-
-            <ImageButton
-                android:id="@+id/timeSetImageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:background="@null"
-                app:srcCompat="@drawable/ic_time_100dp"/>
-
-            <TextView
-                android:id="@+id/selectedTimeTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/timeSetImageButton"
-                android:layout_centerHorizontal="true"
-                android:text="@string/time_now"
-                android:textSize="@dimen/text_view_text_size"/>
-        </RelativeLayout>
-
-    </android.support.v7.widget.GridLayout>
-
-</RelativeLayout>
+</LinearLayout>
