--- a/app/src/main/res/layout/dialog_set_address.xml
+++ b/app/src/main/res/layout/dialog_set_address.xml
@@ -7,6 +7,12 @@
                 android:padding="10dp"
                 android:weightSum="1">
 
+    <WebView
+        android:id="@+id/web_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="invisible"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
