--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="enterButtonBackground">#939393</color>
     <color name="login_edittext_color">#d8d8d8</color>
     <color name="login_hint_color">#979797</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
