--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -29,7 +29,7 @@
         android:text="Ввести адрес вручную..."/>
 
     <android.support.v7.widget.AppCompatButton
-        android:id="@+id/button6"
+        android:id="@+id/gps_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
