--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scaleType="fitCenter"
+        android:visibility="visible"
         app:srcCompat="@drawable/banner_prilozhenia"/>
 
     <android.support.v7.widget.RecyclerView
