--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -34,16 +34,19 @@
                 <pl.droidsonroids.gif.GifImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/loader"
+                    android:layout_weight="3"
                     android:scaleType="fitStart"
-                    android:layout_weight="3"/>
+                    android:src="@drawable/loader"
+                    android:visibility="gone"/>
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:text="@string/location_detecting"
-                    android:textColor="#404040"/>
+                    android:textColor="#404040"
+                    android:visibility="gone"/>
 
             </LinearLayout>
 
