--- a/app/src/main/res/layout/item_fragment_order_last_recyclerview.xml
+++ b/app/src/main/res/layout/item_fragment_order_last_recyclerview.xml
@@ -27,7 +27,8 @@
         android:inputType="textMultiLine"
         android:text="Комментарий водителю (номер подъезда и т. д.)"
         android:textColor="@color/enterButtonBackground"
-        android:textSize="@dimen/text_view_text_size"/>
+        android:textSize="@dimen/text_view_text_size"
+        android:visibility="invisible"/>
 
     <ImageView
         android:id="@+id/point"
@@ -50,6 +51,7 @@
         android:layout_alignStart="@+id/timeButton"
         android:layout_alignTop="@+id/comment_text_view"
         android:tint="@color/enterButtonBackground"
+        android:visibility="invisible"
         app:srcCompat="@drawable/ic_add_driver_message_24dp"/>
 
     <ImageView
